edit for weather api

--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "weather-api",
   "version": "0.1.0",
   "private": true,
+  
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "express": "^4.17.1",
+    "node": "^14.8.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "typescript": "^3.9.7"
   },
+  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
